Restricted py.test search to the tests directory to avoid running tests in local virtualenv.

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ deps =
     pytest-capturelog
     pytest-cov
 commands =
-    {posargs:py.test --cov --cov-report=term-missing -vv}
+    {posargs:py.test tests/ --cov --cov-report=term-missing -vv}
 usedevelop = true
 
 [testenv:spell]
@@ -96,26 +96,26 @@ deps = coverage
 
 [testenv:2.6-nocover]
 commands =
-    {posargs:py.test -vv --ignore=src}
+    {posargs:py.test tests/ -vv --ignore=src}
 usedevelop = false
 
 [testenv:2.7-nocover]
 commands =
-    {posargs:py.test -vv --ignore=src}
+    {posargs:py.test tests/ -vv --ignore=src}
 usedevelop = false
 
 [testenv:3.3-nocover]
 commands =
-    {posargs:py.test -vv --ignore=src}
+    {posargs:py.test tests/ -vv --ignore=src}
 usedevelop = false
 
 [testenv:3.4-nocover]
 commands =
-    {posargs:py.test -vv --ignore=src}
+    {posargs:py.test tests/ -vv --ignore=src}
 usedevelop = false
 
 [testenv:pypy-nocover]
 commands =
-    {posargs:py.test -vv --ignore=src}
+    {posargs:py.test tests/ -vv --ignore=src}
 usedevelop = false
 
