--- a/tox.ini
+++ b/tox.ini
@@ -1,121 +1,33 @@
-; a generative tox configuration, see: https://testrun.org/tox/latest/config.html#generative-envlist
-
 [tox]
 envlist =
-    clean,
-    check,
-    {2.7,3.4},
-    {2.7,3.4}-nocover,
-    report,
-    docs
+  check
+  py34
 
 [testenv]
-basepython =
-    pypy: {env:TOXPYTHON:pypy}
-    2.6: {env:TOXPYTHON:python2.6}
-    {2.7,docs,spell}: {env:TOXPYTHON:python2.7}
-    3.3: {env:TOXPYTHON:python3.3}
-    3.4: {env:TOXPYTHON:python3.4}
-    {clean,check,report,extension-coveralls,coveralls,codecov}: python3.4
-setenv =
-    PYTHONPATH={toxinidir}/tests
-    PYTHONUNBUFFERED=yes
-passenv =
-    *
 deps =
-    pytest
-    pytest-capturelog
-    pytest-cov
-commands =
-    {posargs:py.test tests/ --cov --cov-report=term-missing -vv}
-usedevelop = true
+  -rrequirements.txt
+  coverage
+  pytest-capturelog
+  pytest-cov
 
-[testenv:spell]
-setenv =
-    SPELLCHECK=1
-commands =
-    sphinx-build -b spelling docs dist/docs
-usedevelop = true
-deps =
-    -r{toxinidir}/docs/requirements.txt
-    sphinxcontrib-spelling
-    pyenchant
+commands = {posargs:py.test tests/ --cov -v}
 
-[testenv:docs]
-deps =
-    -r{toxinidir}/docs/requirements.txt
-skip_install = true
-commands =
-    sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+usedevelop = true
 
 [testenv:check]
 basepython = python3.4
+
 deps =
     docutils
     check-manifest
     flake8
     readme
     pygments
+
 skip_install = true
+
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
     flake8 src
-
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
-commands =
-    coverage combine
-    coverage report
-    coveralls []
-
-[testenv:codecov]
-deps =
-    codecov
-skip_install = true
-commands =
-    coverage combine
-    coverage report
-    codecov []
-
-[testenv:report]
-basepython = python3.4
-deps = coverage
-skip_install = true
-commands =
-    coverage combine
-    coverage report
-
-[testenv:clean]
-commands = coverage erase
-skip_install = true
-deps = coverage
-
-[testenv:2.6-nocover]
-commands =
-    {posargs:py.test tests/ -vv --ignore=src}
-usedevelop = false
-
-[testenv:2.7-nocover]
-commands =
-    {posargs:py.test tests/ -vv --ignore=src}
-usedevelop = false
-
-[testenv:3.3-nocover]
-commands =
-    {posargs:py.test tests/ -vv --ignore=src}
-usedevelop = false
-
-[testenv:3.4-nocover]
-commands =
-    {posargs:py.test tests/ -vv --ignore=src}
-usedevelop = false
-
-[testenv:pypy-nocover]
-commands =
-    {posargs:py.test tests/ -vv --ignore=src}
-usedevelop = false
 
