--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ before_install:
 install:
   - pip install tox
 script:
-  - travis_wait
-  - tox -v
+  - travis_wait tox -v
 notifications:
   email:
     on_success: never
