--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: 3.4
-sudo: false
+sudo: true
 env:
   global:
     LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
@@ -10,6 +10,8 @@ before_install:
   - pip --version
   - uname -a
   - lsb_release -a
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libopenblas-dev liblapack-dev
 install:
   - pip install tox
 script:
