--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - uname -a
   - lsb_release -a
   - sudo apt-get update -qq
-  - sudo apt-get install -y libopenblas-dev liblapack-dev
+  - sudo apt-get install -y gfortran libopenblas-dev liblapack-dev
 install:
   - pip install tox
 script:
