--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
-python: 3.4
-sudo: true
+python: 2.7
+sudo: false
 env:
   global:
     LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
@@ -10,12 +10,10 @@ before_install:
   - pip --version
   - uname -a
   - lsb_release -a
-  - sudo apt-get update -qq
-  - sudo apt-get install -y gfortran libopenblas-dev liblapack-dev
 install:
   - pip install tox
 script:
-  - travis_wait tox -v
+  - tox -v
 notifications:
   email:
     on_success: never
