--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - uname -a
   - lsb_release -a
 install:
+  - pip install --upgrade pip
   - pip install tox
 script:
   - tox -v
