--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,6 +16,8 @@ include CONTRIBUTING.rst
 include LICENSE
 include README.rst
 
-include tox.ini .travis.yml appveyor.yml
+include requirements.txt
+
+include tox.ini .travis.yml
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib
