--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 python: 2.7
-sudo: false
+sudo: required
+dist: trusty
 env:
   global:
     LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
@@ -11,10 +12,9 @@ before_install:
   - uname -a
   - lsb_release -a
 install:
-  - pip install --upgrade pip
   - pip install tox
 script:
-  - tox -v
+  - travis_wait tox -v
 notifications:
   email:
     on_success: never
