--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,20 @@ before_install:
   - pip --version
   - uname -a
   - lsb_release -a
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
+  - conda create --yes -n condaenv python=$TRAVIS_PYTHON_VERSION
+  - conda install --yes -n condaenv pip
+  - source activate condaenv
 install:
-  - pip install tox
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose dateutil pandas statsmodels
+  - pip install pytest
+  - python setup.py install -e
 script:
-  - travis_wait tox -v
+  - py.test tests/
 notifications:
   email:
     on_success: never
