--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,12 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda/bin:$PATH
   - conda update --yes conda
-  - conda create --yes -n condaenv python=$TRAVIS_PYTHON_VERSION
+  - conda create --yes -n condaenv python=3
   - conda install --yes -n condaenv pip
   - source activate condaenv
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose dateutil pandas statsmodels
-  - pip install pytest
-  - python setup.py install -e
+  - conda install --yes python=3 atlas numpy scipy matplotlib dateutil pandas pytest
+  - pip install -e ~/mr-fitty
 script:
   - py.test tests/
 notifications:
