--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,9 @@ before_install:
   - conda install --yes -n condaenv pip
   - source activate condaenv
 install:
-  - conda install --yes python=3 atlas numpy scipy matplotlib dateutil pandas pytest pytest-capturelog
+  - conda install --yes python=3 atlas numpy scipy matplotlib dateutil pandas pytest
   - pwd
+  - pip install pytest-capturelog
   - pip install -e `pwd`
 script:
   - py.test tests/
