--- a/experiment_arsenic/experiment_arsenic.cfg
+++ b/experiment_arsenic/experiment_arsenic.cfg
@@ -2,7 +2,7 @@
 reference_spectra/*.e
 
 [data]
-unknown_spectra/OTT3_55_spot0*.e
+unknown_spectra/*_55_spot0.e
 
 [fit]
 minimum_component_count = 1
