--- a/experiment_arsenic/experiment_arsenic.cfg
+++ b/experiment_arsenic/experiment_arsenic.cfg
@@ -1,12 +1,8 @@
-[references]
-reference_spectra/*.e
-
-[data]
-unknown_spectra/*_55_spot0.e
-
 [fit]
 minimum_component_count = 1
 maximum_component_count = 3
+fit_method = nnlsq
+component_count_method = best_subset_selection
 
 [output]
 best_fit_files_dir = output
@@ -16,5 +12,9 @@ table_fp = output/arsenic_fit_table.txt
 [parameters]
 #fit_energy_start: 11834.5
 #fit_energy_stop: 12096.0
-fit_method: lsq
 
+[data]
+unknown_spectra/*_55_spot0.e
+
+[references]
+reference_spectra/*.e
