switch to original component count method for this example

--- a/experiment_arsenic/experiment_arsenic.cfg
+++ b/experiment_arsenic/experiment_arsenic.cfg
@@ -2,11 +2,11 @@
 minimum_component_count = 1
 maximum_component_count = 3
 fit_method = nnlsq
-component_count_method = best_subset_selection
+component_count_method = combination_fit
 
 [output]
 best_fit_files_dir = output
-plots_pdf_fp = output/arsenic_fit_plots.pdf
+plots_pdf_dir = output
 table_fp = output/arsenic_fit_table.txt
 
 [parameters]
@@ -14,7 +14,7 @@ table_fp = output/arsenic_fit_table.txt
 #fit_energy_stop: 12096.0
 
 [data]
-unknown_spectra/*_55_spot0.e
+unknown_spectra/*.e
 
 [references]
 reference_spectra/*.e
