--- a/experiment_arsenic/experiment_arsenic.cfg
+++ b/experiment_arsenic/experiment_arsenic.cfg
@@ -1,13 +1,16 @@
 [fit]
 minimum_component_count = 1
 maximum_component_count = 3
-fit_method = nnlsq
+fit_method = lsq
 component_count_method = combination_fit
 
 [output]
 best_fit_files_dir = output
 plots_pdf_dir = output
 table_fp = output/arsenic_fit_table.txt
+
+[plots]
+top_plot_limit = 3
 
 [parameters]
 #fit_energy_start: 11834.5
