--- a/experiment_arsenic/experiment_arsenic.cfg
+++ b/experiment_arsenic/experiment_arsenic.cfg
@@ -10,7 +10,7 @@ plots_pdf_dir = output
 table_fp = output/arsenic_fit_table.txt
 
 [plots]
-top_plot_limit = 3
+best_fits_plot_limit = 3
 
 [parameters]
 #fit_energy_start: 11834.5
