--- a/experiment_arsenic/experiment_arsenic_quick.cfg
+++ b/experiment_arsenic/experiment_arsenic_quick.cfg
@@ -10,7 +10,7 @@ plots_pdf_dir = output_quick
 table_fp = output_quick/arsenic_fit_table.txt
 
 [plots]
-top_fits_plot_limit = 3
+best_fits_plot_limit = 2
 
 [parameters]
 #fit_energy_start: 11834.5
