--- a/experiment_arsenic/experiment_arsenic_quick.cfg
+++ b/experiment_arsenic/experiment_arsenic_quick.cfg
@@ -13,8 +13,8 @@ table_fp = output_quick/arsenic_fit_table.txt
 best_fits_plot_limit = 2
 
 [parameters]
-#fit_energy_start: 11834.5
-#fit_energy_stop: 12096.0
+fit_energy_start = 11834.5
+fit_energy_stop = 12094.0
 
 [data]
 unknown_spectra/*_spot0.e
