--- a/src/example/arsenic/experiment_arsenic.cfg
+++ b/src/example/arsenic/experiment_arsenic.cfg
@@ -2,7 +2,7 @@
 minimum_component_count = 1
 maximum_component_count = 3
 fit_method = lsq
-component_count_method = combination_fit
+component_count_method = best_subset_selection
 
 [output]
 best_fit_files_dir = output
@@ -17,7 +17,7 @@ best_fits_plot_limit = 3
 #fit_energy_stop = 12096.0
 
 [data]
-unknown_spectra/*.e
+unknown/*.e
 
 [references]
-reference_spectra/*.e
+reference/*.e
