--- a/src/example/arsenic/experiment_arsenic_quick.cfg
+++ b/src/example/arsenic/experiment_arsenic_quick.cfg
@@ -2,7 +2,7 @@
 minimum_component_count = 1
 maximum_component_count = 3
 fit_method = nnlsq
-component_count_method = combination_fit
+component_count_method = best_subset_selection
 
 [output]
 best_fit_files_dir = output_quick
@@ -10,14 +10,14 @@ plots_pdf_dir = output_quick
 table_fp = output_quick/arsenic_fit_table.txt
 
 [plots]
-best_fits_plot_limit = 2
+best_fits_plot_limit = 10
 
 [parameters]
 fit_energy_start = 11834.5
 fit_energy_stop = 12094.0
 
 [data]
-unknown_spectra/*_spot0.e
+unknown/*_spot0.e
 
 [references]
-reference_spectra/*.e
+reference/*.e
