use prediction error

--- a/src/example/arsenic/experiment_arsenic_quick.cfg
+++ b/src/example/arsenic/experiment_arsenic_quick.cfg
@@ -2,7 +2,7 @@
 minimum_component_count = 1
 maximum_component_count = 3
 fit_method = nnlsq
-component_count_method = best_subset_selection
+component_count_method = prediction_error
 
 [output]
 best_fit_files_dir = output_quick
